    - modify searchapiurl for identica option
    - added deprecation notice to Net::Identica with Net::Twitter examples
    - replaced Test::Exception with Test::Fatal in tests

3.15000 2011-02-25
    - added Lists API method members_create_all (alias add_list_members)
    - added tests dependency: Test::Exception (closes RT #65786)

3.14003 2011-02-07
    - Fixed: trends_location (closes RT #65506)
    - Added parameters trim_user, include_entities, include_rts (frank cuny, closes RT #62542)

3.14002 2010-11-02
   - Fixed: use File::Spec tests that failed in Win32 (turugina)

3.14001 2010-10-19
    - Make Crypt::SSLeay a hard requirement (really no longer practical without it)

3.14000 2010-10-19
    - Added #newtwitter API methods (account_totals, account_settings,
      suggestion_categories, user_suggestions, show_direct_message,
      retweeted_to_user, retweeted_by_user, lookup_friendships,
      update_friendship, all_lists, related_results)
    - fixed: memory leak in RateLimit trait

3.13009 2010-09-17
    - use Athorization header for OAuth token requests rather than query params
    - "identica => 1" sets OAuth URLs (assist from barbie)
    - updated Synopsis with OAuth (closes RT#61273)

3.13008_02 2010-09-04
    - fixed stack frame filter
    - fixed missing dependency
    - detect Twitter's errors array as an error object

3.13008_01 2010-08-31
    - extract error from the various disparate error formats

3.13008 2010-08-26
    - use HTTPS for all OAuth token negotiation steps

3.13007 2010-07-06
    - decode_html_entities now decodes all fields (incl source in search results)
    - Role::OAuth doc patch by Doug Bell <doug@plainblack.com>
    - fixed: incompatibility between "since" and InflateObjects

3.13006 2010-06-18
    - test fix: bump the skip count for a new test in t/unicode.t for optional module

3.13005 2010-06-18
    - fixed: since (synthetic arg) filtering
    - fixed: don't use args for OAuth signature on multi-part mime posts
