@@ -1,3 +1,4 @@
+    - Added no_retweet_ids method
     - modify searchapiurl for identica option
     - added deprecation notice to Net::Identica with Net::Twitter examples
     - replaced Test::Exception with Test::Fatal in tests
